--- a/services/traefik/config.yml
+++ b/services/traefik/config.yml
@@ -29,9 +29,16 @@
 
 # See https://doc.traefik.io/traefik/https/tls/
 tls:
+  stores:
+    default:
+      defaultCertificate:
+        certFile: /etc/traefik/keys/server-cert.crt
+        keyFile: /etc/traefik/keys/server-key.key
   certificates:
-    - certFile: "/etc/traefik/keys/ca-cert.pem"
-      keyFile: "/etc/traefik/keys/ca-key.pem"
+    - certFile: /etc/traefik/keys/server-cert.crt
+      keyFile: /etc/traefik/keys/server-key.key
+      stores:
+        - default
 
   # options:
   #   # To use with the label "traefik.http.routers.myrouter.tls.options=modern@file"
