Crypto Examples Inclusion

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     image: httpd:latest
     networks:
       - web
+      - default
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=web"
@@ -33,11 +34,16 @@ services:
       - "traefik.http.routers.webserver.middlewares=basic-auth"
       - "traefik.http.routers.webserver.tls=true" # Enable TLS for secure traffic
     volumes:
-      - "./services/traefik/keys/server-cert.crt:/usr/local/apache2/conf/ssl/server-cert.crt" # Set the certificate key
-      - "./services/traefik/keys/server-key.key:/usr/local/apache2/conf/ssl/server-key.key" # Set the private key
       - "./services/webserver/html:/usr/local/apache2/htdocs"
-      # - "./services/webserver/httpd-vhosts.conf:/usr/local/apache2/conf/httpd-vhosts.conf"
 
-  # kali:
-  #   image: "kalilinux/kali-rolling:latest"
-  #   tty: true
+  kali:
+    build:
+      context: ./services/kali
+    networks:
+      - default
+    tty: true
+    volumes:
+      - "./services/kali:/usr/local/services/kali"
+      - "./crypto-results:/usr/local/crypto-results"
+    environment:
+      - FE_CREDENTIALS=${BASIC_AUTH_PAIR:?Basic auth credential pair is missing}
