--- a/services/kali/Dockerfile
+++ b/services/kali/Dockerfile
@@ -3,4 +3,4 @@ FROM kalilinux/kali-rolling:latest
 
 # Update the package repository and install required packages
 RUN apt-get update \
-    && apt-get install -y gnutls-bin openscap-utils gnupg curl john
+    && apt-get install -y gnutls-bin gnupg curl john
